@@ -1,6 +1,7 @@
 bin/pod_example
 CHANGES
 Example.pm
+examples/ex1.pl
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
