@@ -5,6 +5,7 @@
 - Remove "(3pm)" from pod doc.
 - Rewrite 03-pod.t to better version for Perl 5.6.
 - Rewrite to new version of build system.
+- Add examples/ directory.
 
 0.01 (July 15, 2011)
 - First version.
